# azure-keyvault-docker

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/azure_keyvault_docker/: __init__.py  __main__.py  app.py  auth.py  certs.py  config.py  store.py
tests/: conftest.py  test_sdk_integration.py
tests/java/: pom.xml  run_maven.py  test_java_sdk_integration.py
tests/java/src/test/java/dev/ashiqabdulkhader/keyvaultdocker/: KeyVaultJavaSdkIntegrationTest.java
tests/python/: test_sdk_integration.py
